objects/Operation_Check_Master_Data__c.object
<CustomObject>
    <description>This object captures the operation checks master data information.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operation Check Master Data</relationshipLabel>
        <relationshipName>Operation_Check_Master_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Build_Station_ID__c</fullName>
        <label>Build Station ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Mode__c</fullName>
        <label>Bus Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Description__c</fullName>
        <label>Operation Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Sequence_Number__c</fullName>
        <label>Operation Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <label>Transmission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Transmission</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Description__c</fullName>
        <label>Value Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Required_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Required Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field indicates whether the operation check item is still valid</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Operation Check Master Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Operation_Item_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Check Master Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>